--- a/item.html
+++ b/item.html
@@ -243,16 +243,16 @@
 							<div class="fl title">
 								<div class="control-group">
 									<div class="controls">
-										<input autocomplete="off" type="text" disabled value="1" minnum="1" class="itxt" />
-										<a href="javascript:void(0)" class="increment plus">+</a>
-										<a href="javascript:void(0)" class="increment mins">-</a>
+										<input autocomplete="off" type="text" v-model="num" disabled value="1" minnum="1" class="itxt" />
+										<a href="javascript:void(0)" class="increment plus" @click="incr()">+</a>
+										<a href="javascript:void(0)" class="increment mins" @click="decr()">-</a>
 									</div>
 								</div>
 							</div>
 							<div class="fl">
 								<ul class="btn-choose unstyled">
 									<li>
-										<a href="success-cart.html" target="_blank" class="sui-btn  btn-danger addshopcar">加入购物车</a>
+										<a href="javascript:void(0);" target="_blank" @click="addCart" class="sui-btn  btn-danger addshopcar">加入购物车</a>
 									</li>
 								</ul>
 							</div>
@@ -675,7 +675,21 @@
     var itemVm = new Vue({
         el:"#itemApp",
         data:{
+        	num: 1,
         },
+		methods: {
+        	addCart() {
+
+			},
+			incr(){
+        		this.num++;
+			},
+			decr(){
+        		if (this.num >1){
+        			this.num--;
+				}
+			}
+		},
         components:{
             lyTop: () => import('/js/pages/top.js')
         }
