新增订单系统，项目暂时完结了...

--- a/cart.html
+++ b/cart.html
@@ -92,7 +92,7 @@
                         <span><em>已节省：</em><i>-¥20.00</i></span>
                     </div>
                     <div class="sumbtn">
-                        <a class="sum-btn"  href="getOrderInfo.html"  target="_blank">结算</a>
+                        <a class="sum-btn"  href="javascript:void(0).html" @click="toOrder()" >结算</a>
                     </div>
                 </div>
             </div>
@@ -300,6 +300,17 @@
           }
         },
         methods: {
+            toOrder(){
+                ly.verify().then(res=>{
+                    ly.store.set("LY_SELECTED", this.selected);
+                    window.location = "http://www.leyou.com/getOrderInfo.html";
+
+                }).catch(()=>{
+                    //未登录购物车
+                    window.location = "http://www.leyou.com/login.html?returnUrl=http://www.leyou.com/cart.html";
+                })
+
+            },
             incr(cart) {
                 cart.num++;
                 ly.verify().then(res=>{
